<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="per_person">Tip per person: %1$s\n\nTotal per person: %2$s</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="pers_number_warning">Specify number of person</string>
    <string name="pers_number_zero_warning">Number of persons can\'t be zero!</string>
    <string name="fifteen_percent_button">Amazing (15%)</string>
    <string name="ten_percent_button">Good (10%)</string>
    <string name="seven_percent_button">Okay (7%)</string>
    <string name="number_of_persons_hint">Number of persons</string>
</resources>